--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 
+    testCompile 'com.github.stefanbirkner:system-rules:1.16.0'
+
     androidTestCompile('com.android.support.test:runner:0.4.1'){
         exclude group: 'com.android.support', module: 'support-annotations'
     }
